# WeaverFramework

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.dev  requirements.txt
.github/workflows/: validate_codebase.yaml
tests/: main.py  test_configuration_configuration_manager.py  test_configuration_setup.py  test_microservice_api_response.py  test_microservice_base_api_route.py  test_microservice_base_microservice.py  test_microservice_http_content_type.py  test_version.py
tests/database/: test_sqlite_interface.py
tests/microservice/: test_health_check_mixin.py  test_microservice_decorators.py  test_rest_client.py
weaver_framework/: __init__.py  constants.py
weaver_framework/configuration_system/: __init__.py  configuration_manager.py  configuration_setup.py
weaver_framework/database/: __init__.py  sqlite_interface.py
weaver_framework/microservice/: __init__.py  api_response.py  base_api_route.py  base_microservice.py  health_check_mixin.py  http_content_type.py  logging_configuration.py  microservice_decorators.py  rest_client.py
