[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weaver-framework"
dynamic = ["version"]
description = "Weaver Framework"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "SwatKat1977" }
]

dependencies = [
    "aiohttp==3.13.5",
    #")quart==0.20.0",
    "jsonschema==4.26.0"
]

[tool.setuptools.dynamic]
version = {attr = "weaver_framework.__version__"}

[tool.setuptools.packages.find]
where = ["."]